--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
+#PROVIDER
+PROVIDER_DB=mongodb
 
 ### MONGO DB DATABASE 
-
 DATABASE_URL="mongodb+srv://user:password@cluster0.gfxktwy.mongodb.net/BITEV?retryWrites=true&w=majority"
 
 ### ENV
