--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@bitev.io/cms",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
   "scripts": {
     "sync": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx prisma generate && node bitev.config.js",
     "dev": "nodemon",
-    "update":"npx bitev.io@latest update"
+    "update":"npx @bitev.io/core@latest update"
   },
 
   "dependencies": {
