--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 #PROVIDER
-PROVIDER_DB=mongodb
+DATABASE_PROVIDER="mongodb"
 
 ### MONGO DB DATABASE 
 DATABASE_URL="mongodb+srv://user:password@cluster0.gfxktwy.mongodb.net/BITEV?retryWrites=true&w=majority"
