--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "sync": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma generate && node bitev.config.js",
+    "start": "NODE_ENV=production npx prisma generate && node bitev.config.js",
     "dev": "nodemon",
     "update":"npx @bitev.io/core@latest update"
   },
