--- a/.env
+++ b/.env
@@ -16,3 +16,9 @@ SECRET_KEY_JWT=""
 #### ADMIN ACCOUNT
 ADMIN_EMAIL="admin@admin.com"
 ADMIN_PASSWORD="Password"
+
+
+## CACHE SYSTEM REDIS
+REDIS_URL=""
+REDIS_UERNAME=""
+REDIS_PASSWORD=""
